--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "casual": "^1.5.17",
+    "cors": "^2.8.5",
     "express": "^4.15.2",
     "graphql": "^0.9.6",
     "graphql-server-express": "^0.6.0",
