--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-  presets: ['latest'],
-  plugins: [
-    'transform-runtime',
-    'transform-async-generator-functions',
-    'transform-object-rest-spread',
-  ],
+  "presets": ["latest"],
+  "plugins": [
+    "transform-runtime",
+    "transform-async-generator-functions",
+    "transform-object-rest-spread"
+  ]
 }
