--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
   "author": "",
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-transform-async-generator-functions": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.23.0",
-    "eslint": "^3.19.0",
-    "nodemon": "^1.11.0"
+    "eslint": "^6.7.2",
+    "fsevents": "^2.1.2",
+    "nodemon": "^2.0.1"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "casual": "^1.5.17",
+    "body-parser": "^1.19.0",
+    "casual": "^1.6.2",
     "cors": "^2.8.5",
-    "express": "^4.15.2",
-    "graphql": "^0.9.6",
-    "graphql-server-express": "^0.6.0",
-    "graphql-tools": "^0.11.0",
-    "lodash": "^4.17.4",
-    "randexp": "^0.4.6"
+    "express": "^4.17.1",
+    "graphql": "^14.5.8",
+    "graphql-server-express": "^1.4.1",
+    "graphql-tools": "^4.0.6",
+    "lodash": "^4.17.15",
+    "randexp": "^0.5.3"
   }
 }
